# n03an-folio

./: .gitignore  CNAME  README.md  folio.ipynb  folio.py  folio_service.py  index.html  pyproject.toml  refresh_data.ipynb  requirements.txt  style.css  style_components.py  temp.md  ticker_info.py
.github/workflows/: main.yml
IB_extract/: 2004-19Mar-31Dec.csv  2025-1Jan-18Nov.csv  2025-1Jan-6Jul.csv  ib_19042025.csv  ib_24122024.csv  notes.md  temp.csv
current_data/: CRTT.csv  CTRN.csv  POST.csv  TRNT.csv  account.csv
static/: shariah.md
static/ticker_icons/: notes.md
static/ticker_info/: ADBE.md  ALAB.md  APSI.md  BEAM.md  BITB.md  BSEM.md  BTDR.md  CLSK.md  CRMD.md  DT.md  ELVR.md  ENPH.md  HIMS.md  IRD.md  IREN.md  LFMD.md  MRK.md  MU.md  PLL.md  TSLA.md  TSM.md  UPXI.md  VIR.md  VITL.md
