[tool.poetry]
name = "n03an-folio"
version = "0.1.0"
description = "Interactive Broker Playground for Nouman's portfolio"
authors = ["n03an <nouman.memon@icloud.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
prettytable = "^3.12.0"
sympy = "^1.13.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
